--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -30,10 +30,8 @@
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
         android:layout_alignParentBottom="true"
-        android:background="#ffffff"
+        android:background="@color/colorPrimaryDark"
         app:itemIconTint="@drawable/nav_item_state_list"
         app:itemTextColor="@drawable/nav_item_state_list"
         app:menu="@menu/bottom_nav_menu" />
