--- a/app/src/main/res/drawable/gradient_bottom.xml
+++ b/app/src/main/res/drawable/gradient_bottom.xml
@@ -5,7 +5,7 @@
     <gradient
         android:angle="90"
         android:endColor="#00ffffff"
-        android:startColor="#ffffff"
+        android:startColor="#1B2836"
         android:centerColor="#00ffffff" />
 
     <corners android:radius="0dp" />
