--- a/app/src/main/res/drawable/nav_item_state_list.xml
+++ b/app/src/main/res/drawable/nav_item_state_list.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/onpressed"
         android:state_pressed="true"/>
-    <item android:color="@color/colorAccent"
+    <item android:color="@android:color/white"
         android:state_checked="true"/>
     <item android:color="@color/yourinactivecolor"
         android:state_checked="false"/>
