--- a/app/src/main/res/drawable/tv_shape.xml
+++ b/app/src/main/res/drawable/tv_shape.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle">
 
-<solid android:color="@color/colorAccent"/>
+<solid android:color="@color/colorPrimaryDark"/>
 
 <corners android:bottomRightRadius="8dp"
     android:bottomLeftRadius="8dp"
